--- a/details.html
+++ b/details.html
@@ -9,32 +9,26 @@
     />
     <meta name="author" content="Mohamed Aridah" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap"
       rel="stylesheet"
     />
-    <!-- Fontawesome Library -->
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css"
     />
-    <!-- Shared CSS Styles File -->
     <link rel="stylesheet" href="./css/common.css" />
-    <!-- Page Custom CSS File -->
     <link rel="stylesheet" href="./css/details.css" />
     <title>Details Page</title>
   </head>
   <body>
-    <!-- Loader -->
     <div class="loader">
       <div class="spinner">
         <i class="fa-regular fa-circle-notch fa-spin icon"></i>
       </div>
     </div>
-    <!-- Scroll Top -->
     <button
       type="button"
       aria-label="Scroll Top Button"
@@ -42,7 +36,6 @@
     >
       <i class="fa-regular fa-chevron-up icon"></i>
     </button>
-    <!-- Header -->
     <header class="header">
       <div class="container flex flex-jc-sb flex-ai-c">
         <div class="logo">
@@ -60,7 +53,6 @@
         </button>
       </div>
     </header>
-    <!-- Back Button -->
     <div class="back-button">
       <div class="container">
         <a href="index.html" class="btn btn-back btn-with-icon">
@@ -74,7 +66,8 @@
         <section class="country-details"></section>
       </div>
     </main>
-    <script src="./js/common.js"></script>
-    <script src="./js/details.js"></script>
+    <!-- <script src="./js/common.js"></script>
+    <script src="./js/details.js"></script> -->
+    <script src="script.js"></script>
   </body>
 </html>
