--- a/index.html
+++ b/index.html
@@ -9,26 +9,21 @@
     />
     <meta name="author" content="Mohamed Aridah" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap"
       rel="stylesheet"
     />
-    <!-- Fontawesome Library -->
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css"
     />
-    <!-- Shared CSS Styles File -->
     <link rel="stylesheet" href="./css/common.css" />
-    <!-- Page Custom CSS File -->
     <link rel="stylesheet" href="./css/main.css" />
     <title>Countries Info</title>
   </head>
   <body>
-    <!-- Scroll Top -->
     <button
       type="button"
       aria-label="Scroll Top Button"
@@ -36,7 +31,6 @@
     >
       <i class="fa-regular fa-chevron-up icon"></i>
     </button>
-    <!-- Header -->
     <header class="header">
       <div class="container flex flex-jc-sb flex-ai-c">
         <div class="logo">
@@ -54,7 +48,6 @@
         </button>
       </div>
     </header>
-    <!-- Filters -->
 
     <section class="filters">
       <div class="container">
@@ -72,87 +65,17 @@
             <i class="fa-regular fa-chevron-down icon"></i>
           </div>
           <div class="dropdown-body">
-            <ul>
-              <li data-region="all">All</li>
-              <li data-region="africa">Africa</li>
-              <li data-region="americas">America</li>
-              <li data-region="asia">Asia</li>
-              <li data-region="europe">Europe</li>
-              <li data-region="oceania">Oceania</li>
-            </ul>
           </div>
         </div>
       </div>
     </section>
-    <!-- Countries -->
+
     <main class="main">
       <div class="container">
         <section class="countries-grid">
-          <a
-            href="#"
-            class="country scale-effect"
-            data-country-name="Afghanistan"
-          >
-            <div class="country-flag">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_the_Taliban.svg"
-                alt="Afghanistan FLag"
-              />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Afghanistan</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>40218234</li>
-                <li><strong>Region: </strong>Asia</li>
-                <li><strong>capital: </strong>Kabul</li>
-              </ul>
-            </div>
-          </a>
-          <a
-            href="#"
-            class="country scale-effect"
-            data-country-name="Åland Islands"
-          >
-            <div class="country-flag">
-              <img src="https://flagcdn.com/ax.svg" alt="Åland Islands FLag" />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Åland Islands</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>28875</li>
-                <li><strong>Region: </strong>Europe</li>
-                <li><strong>capital: </strong>Mariehamn</li>
-              </ul>
-            </div>
-          </a>
-          <a href="#" class="country scale-effect" data-country-name="Aruba">
-            <div class="country-flag">
-              <img src="https://flagcdn.com/aw.svg" alt="Aruba FLag" />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Aruba</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>106766</li>
-                <li><strong>Region: </strong>Americas</li>
-                <li><strong>capital: </strong>Oranjestad</li>
-              </ul>
-            </div>
-          </a>
-          <a href="#" class="country scale-effect" data-country-name="Belize">
-            <div class="country-flag">
-              <img src="https://flagcdn.com/bz.svg" alt="Belize FLag" />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Belize</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>397621</li>
-                <li><strong>Region: </strong>Americas</li>
-                <li><strong>capital: </strong>Belmopan</li>
-              </ul>
-            </div>
-          </a>
         </section>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
