--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           </a>
         </div>
         <button
+        onclick="activateDarkMode()"
           type="button"
           aria-label="Theme Switcher Button"
           class="theme-toggle flex flex-jc-sb flex-ai-c"
@@ -66,19 +67,19 @@
             placeholder="Search for a country..."
           />
         </div>
-        <div class="dropdown-wrapper">
+        <div class="dropdown-wrapper" onclick="openDropDown()">
           <div class="dropdown-header flex flex-jc-sb flex-ai-c">
             <span>Filter by Region</span>
             <i class="fa-regular fa-chevron-down icon"></i>
           </div>
           <div class="dropdown-body">
             <ul>
-              <li data-region="all">All</li>
-              <li data-region="africa">Africa</li>
-              <li data-region="americas">America</li>
-              <li data-region="asia">Asia</li>
-              <li data-region="europe">Europe</li>
-              <li data-region="oceania">Oceania</li>
+              <li class="li-drop" data-region="all">All</li>
+              <li class="li-drop" data-region="africa">Africa</li>
+              <li class="li-drop" data-region="americas">America</li>
+              <li class="li-drop" data-region="asia">Asia</li>
+              <li class="li-drop" data-region="europe">Europe</li>
+              <li class="li-drop" data-region="oceania">Oceania</li>
             </ul>
           </div>
         </div>
@@ -88,71 +89,9 @@
     <main class="main">
       <div class="container">
         <section class="countries-grid">
-          <a
-            href="#"
-            class="country scale-effect"
-            data-country-name="Afghanistan"
-          >
-            <div class="country-flag">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Flag_of_the_Taliban.svg"
-                alt="Afghanistan FLag"
-              />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Afghanistan</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>40218234</li>
-                <li><strong>Region: </strong>Asia</li>
-                <li><strong>capital: </strong>Kabul</li>
-              </ul>
-            </div>
-          </a>
-          <a
-            href="#"
-            class="country scale-effect"
-            data-country-name="Åland Islands"
-          >
-            <div class="country-flag">
-              <img src="https://flagcdn.com/ax.svg" alt="Åland Islands FLag" />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Åland Islands</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>28875</li>
-                <li><strong>Region: </strong>Europe</li>
-                <li><strong>capital: </strong>Mariehamn</li>
-              </ul>
-            </div>
-          </a>
-          <a href="#" class="country scale-effect" data-country-name="Aruba">
-            <div class="country-flag">
-              <img src="https://flagcdn.com/aw.svg" alt="Aruba FLag" />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Aruba</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>106766</li>
-                <li><strong>Region: </strong>Americas</li>
-                <li><strong>capital: </strong>Oranjestad</li>
-              </ul>
-            </div>
-          </a>
-          <a href="#" class="country scale-effect" data-country-name="Belize">
-            <div class="country-flag">
-              <img src="https://flagcdn.com/bz.svg" alt="Belize FLag" />
-            </div>
-            <div class="country-info">
-              <h2 class="country-title">Belize</h2>
-              <ul class="country-brief">
-                <li><strong>population: </strong>397621</li>
-                <li><strong>Region: </strong>Americas</li>
-                <li><strong>capital: </strong>Belmopan</li>
-              </ul>
-            </div>
-          </a>
         </section>
       </div>
     </main>
+    <script src="/script.js"></script>
   </body>
 </html>
