finished injection using JSON

--- a/index.html
+++ b/index.html
@@ -70,22 +70,24 @@
   <main class="main">
     <div class="container">
       <section class="countries-grid">
-        <a href="#" class="country scale-effect" data-country-name="" style="display:none;">
+        <a href="#" class="country scale-effect" data-country-name="" style="display:none;"> 
+          <!-- remember to switch the style into -->
           <div class="country-flag">
             <img src="#" alt="country Flag" class="country-image" />
           </div>
           <div class="country-info">
             <h2 class="country-title">Country Name</h2>
             <ul class="country-brief">
-              <li><strong>Population: </strong><span class="country-population"></span></li>
-              <li><strong>Region: </strong><span class="country-region"></span></li>
-              <li><strong>Capital: </strong><span class="country-capital"></span></li>
+              <li><strong>population: </strong><span class="country-population"></span></li>
+              <li><strong>region: </strong><span class="country-region"></span></li>
+              <li><strong>capital: </strong><span class="country-capital"></span></li>
             </ul>
           </div>
         </a>
       </section>
     </div>
   </main>
+  <script src="script.js"></script>
 </body>
 
 </html>
