finished searching by region & details JS

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <ul>
             <li data-region="all">All</li>
             <li data-region="africa">Africa</li>
-            <li data-region="americas">America</li>
+            <li data-region="america">America</li>
             <li data-region="asia">Asia</li>
             <li data-region="europe">Europe</li>
             <li data-region="oceania">Oceania</li>
