--- a/details.html
+++ b/details.html
@@ -74,7 +74,9 @@
         <section class="country-details"></section>
       </div>
     </main>
-    <script src="./js/common.js"></script>
-    <script src="./js/details.js"></script>
+    <!-- <script src="./js/common.js"></script>
+    <script src="./js/details.js"></script> -->
   </body>
+  <script src="details.js"></script>
+
 </html>
