finished details.js

--- a/details.html
+++ b/details.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- Loader -->
-    <div class="loader">
+    <div class="loader" >
       <div class="spinner">
         <i class="fa-regular fa-circle-notch fa-spin icon"></i>
       </div>
@@ -74,7 +74,9 @@
         <section class="country-details"></section>
       </div>
     </main>
-    <script src="./js/common.js"></script>
-    <script src="./js/details.js"></script>
+    <!-- <script src="./js/common.js"></script>
+    <script src="./js/details.js"></script> -->
+
+    <script src="details.js"></script>
   </body>
 </html>
