"Added functionality for selecting a specific country"

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </section>
     </div>
   </main>
-  <script src="./js/main.js"></script>
+  <script src="./js/common.js"></script>
 </body>
 
 </html>
