--- a/details.html
+++ b/details.html
@@ -71,10 +71,12 @@
     </div>
     <main class="main">
       <div class="container">
-        <section class="country-details"></section>
+        <section class="country-details">
+        </section>
       </div>
     </main>
     <script src="./js/common.js"></script>
-    <script src="./js/details.js"></script>
+    <script src="./details.js"></script>
+
   </body>
 </html>
